--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ h1  {
   }
   .contentbox {
     color: #2fafaf;
-    font-size: 50px
+    font-size: 50px;
   }
   .container {
     padding-left: 3px;
