--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ h1  {
   color: #2fafaf;
 }
 /*This query is used to stop content from stretching out too far on larger computer screens*/
+/*
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1100px;
@@ -88,14 +89,18 @@ h1  {
     padding-right: auto;
   }
 }
+*/
 /*this query adjusts the nav bar on smaller screens to stop overflow*/
+/*
 @media screen and (max-width: 760px) {
   .horizontal_nav a {
     padding: 3px;
     width: auto;
   }
 }
+*/
 /*this query is to make the website more mobile friendly and also applies a verticle static navbar.*/
+/*
 @media screen and (max-width: 600px) {
   body {
     background-image: none;
@@ -119,7 +124,7 @@ h1  {
     position: absolute;
     top: 0px;
   }
-}
+}*/
 /*this media query changes the the page to optimize for oneplus 6t*/
 @media screen and (max-width: 1200px) and (min-width:1000px) {
   h1 {
