--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ h1  {
   }
 }*/
 /*this media query changes the the page to optimize for oneplus 6t*/
-@media screen and (max-width: 2400px) {
+@media screen {
   h1 {
     font-size: 80px;
   }
