--- a/css/styles.css
+++ b/css/styles.css
@@ -156,8 +156,33 @@ h1  {
   }
 }
 */
-@media screen and (max-width: 1200px) and (min-width: 1000px){
+@media screen and (min-width: 1200px) {
+  .contentbox {
+    color: green;
+  }
+}
+@media screen and (max-width: 1200px) and (min-width: 1000px) {
   .contentbox {
     color: #2fafaf;
+  }
+}
+@media screen and (max-width: 1000px) and (min-width: 900px) {
+  .contentbox {
+    color: red;
+  }
+}
+@media screen and (max-width: 900px) and (min-width: 800px) {
+  .contentbox {
+    color: #ff00ff;
+  }
+}
+@media screen and (max-width: 800px) and (min-width: 500px) {
+  .contentbox {
+    color: #darksalmon;
+  }
+}
+@media screen and (max-width: 500px){
+  .contentbox {
+    color: lightgrey;
   }
 }
