--- a/css/styles.css
+++ b/css/styles.css
@@ -126,8 +126,7 @@ h1  {
   }
 }*/
 /*this media query changes the the page to optimize for oneplus 6t*/
-/*
-@media screen and (max-width: 2500px) {
+@media screen and (max-width: 980px) and (min-width: 960px) {
   h1 {
     font-size: 80px;
   }
@@ -155,7 +154,6 @@ h1  {
     top: 0px;
   }
 }
-*/
 /*this code is for figuring out screen sizes*/
 
 }
@@ -164,10 +162,12 @@ h1  {
     color: #2fafaf;
   }
 }
+/*
 @media screen and (max-width: 980px) and (min-width: 960px) {
   .contentbox {
     color: blue;
   }
+  */
 }
 @media screen and (max-width: 960px) and (min-width: 940px) {
   .contentbox {
